supplementary commit: code cleaning for reproducing results on stanford background

--- a/examples/stanford_background/python/testing_stanford_background.ipynb
+++ b/examples/stanford_background/python/testing_stanford_background.ipynb
@@ -8,11 +8,12 @@
    },
    "outputs": [],
    "source": [
+    "'''this script is used to evaluate the trained net on the test set'''\n",
     "import numpy as np\n",
     "import sys\n",
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "\n",
-    "caffe_root='/usr/local/google/home/zyan/proj/caffe_private_recurrent_2d/'\n",
+    "caffe_root='/home/zyan3/proj/caffe-private-recurrent_2d/'\n",
     "sys.path.insert(0, caffe_root + 'python')\n",
     "import caffe\n",
     "import os\n",
@@ -45,20 +46,15 @@
    ],
    "source": [
     "# Set the right path to your model definition file, pretrained model weights,\n",
-    "# and the image you would like to classify.\n",
-    "google_caffe_root = '/usr/local/google/home/zyan/proj/caffe/'\n",
-    "# layer_dir=google_caffe_root+'google_extra/examples/stanford_background/grid_lstm_3d_1_lay/'\n",
-    "layer_dir=google_caffe_root+'google_extra/examples/stanford_background/renet_3_lay/'\n",
-    "\n",
-    "model_name = 'renet_3_lay_MP_nolbw_nopeep_lr5e-2'\n",
-    "iter_num = 19000\n",
-    "MODEL_FILE = google_caffe_root+\\\n",
-    "'google_extra/examples/stanford_background/renet_3_lay_MP_nolbw_nopeep_deploy.prototxt'\n",
+    "layer_dir=caffe_root+'/examples/stanford_background/renet_3_lay/'\n",
+    "model_name = 'renet_3_lay_HP_nolbw_nopeep_lr5e-2'\n",
+    "iter_num = 36000\n",
+    "MODEL_FILE = caffe_root+\\\n",
+    "'examples/stanford_background/renet_3_lay_HP_nolbw_nopeep_deploy.prototxt'\n",
     "PRETRAINED =layer_dir +'%s_iter_%d.caffemodel'%(model_name, iter_num)\n",
     "\n",
     "net_input_multiple = [3,3]\n",
     "label_names=['0:unknown','1:sky','2:tree','3:road','4:grass','5:water','6:building','7:mountain','8:foreground']\n",
-    "data_mean=np.array([104,117,123])\n",
     "num_label=9\n",
     "\n",
     "print 'MODEL_FILE: %s' % MODEL_FILE\n",
@@ -227,9 +223,8 @@
    },
    "outputs": [],
    "source": [
-    "img_dir='/usr/local/google/home/zyan/data/stanford_background/images/'\n",
-    "label_dir='/usr/local/google/home/zyan/data/stanford_background/labels/'\n",
-    "gt_seg_dir='/usr/local/google/home/zyan/data/stanford_background/segment_vis/'\n",
+    "img_dir='/home/zyan3/data/stanford_background/images/'\n",
+    "label_dir='/home/zyan3/data/stanford_background/labels/'\n",
     "\n",
     "test_list=caffe_root+'examples/stanford_background/test_0.txt'\n",
     "test_img_names=[]\n",
@@ -247,7 +242,147 @@
    "outputs": [],
    "source": [
     "'''data transform parameters'''\n",
+    "data_mean=np.array([104,117,123])\n",
     "input_scale = 0.0078125"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "process 0 out of 143 images\n",
+      "elapsed time 0.00\n",
+      "process 20 out of 143 images\n",
+      "elapsed time 10.69\n",
+      "process 40 out of 143 images\n",
+      "elapsed time 12.05\n",
+      "process 60 out of 143 images\n",
+      "elapsed time 11.37\n",
+      "process 80 out of 143 images\n",
+      "elapsed time 11.13\n",
+      "process 100 out of 143 images\n",
+      "elapsed time 11.20\n",
+      "process 120 out of 143 images\n",
+      "elapsed time 11.40\n",
+      "process 140 out of 143 images\n",
+      "elapsed time 11.69\n",
+      "pixel accuracy 79.35\n",
+      "class accuracy 69.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''evaluate on the test set'''\n",
+    "pred_label_image_save_dir = layer_dir + model_name + '_prediction/'\n",
+    "if not os.path.exists(pred_label_image_save_dir):\n",
+    "    os.mkdir(pred_label_image_save_dir)\n",
+    "\n",
+    "\n",
+    "class_agnostic_pix_correct = 0.0\n",
+    "class_agnostic_pix_total = 0.0\n",
+    "class_pix_correct = np.zeros((num_label))\n",
+    "class_pix_total = np.zeros((num_label))\n",
+    "\n",
+    "st_time = time.time()\n",
+    "\n",
+    "for i,test_img_name in enumerate(test_img_names):\n",
+    "# for i in range(2):\n",
+    "    if i % 20 == 0:\n",
+    "        print 'process %d out of %d images' % (i, len(test_img_names))\n",
+    "        ep_time = time.time() - st_time\n",
+    "        st_time = time.time()\n",
+    "        print 'elapsed time %4.2f' % ep_time\n",
+    "    test_img_name = test_img_names[i]\n",
+    "#     print 'test image name %s' % test_img_name\n",
+    "    test_img = caffe.io.load_image(img_dir+test_img_name+'.jpg')\n",
+    "#     print 'test_img_name shape ', test_img.shape\n",
+    "    in_height, in_width = test_img.shape[0], test_img.shape[1]\n",
+    "    \n",
+    "    padded_img = pad_image(test_img,net_input_multiple)\n",
+    "    padded_height, padded_width = padded_img.shape[0], padded_img.shape[1]\n",
+    "    \n",
+    "    transformer = caffe.io.Transformer({'data': [1, 3, padded_img.shape[0], padded_img.shape[1]]})\n",
+    "    transformer.set_transpose('data', (2,0,1))\n",
+    "    transformer.set_mean('data', data_mean) # mean pixel\n",
+    "    transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
+    "    transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB\n",
+    "    transformer.set_input_scale('data', input_scale)  \n",
+    "    \n",
+    "    net.blobs['data'].reshape(1, 3, padded_height, padded_width)\n",
+    "    net.blobs['data'].data[...] = transformer.preprocess('data', padded_img)\n",
+    "    out = net.forward()\n",
+    "    \n",
+    "    '''  ground truth label '''\n",
+    "    gt_label = read_label_file(label_dir + test_img_name + '.regions.txt')\n",
+    "    ''' predicted label '''\n",
+    "    pred_label=np.argmax(net.blobs['prob'].data[0,:,:,:],axis=0)\n",
+    "    pred_label = pred_label[:in_height, :in_width]\n",
+    "    \n",
+    "    assert gt_label.shape == pred_label.shape\n",
+    "    \n",
+    "    pred_correct = pred_label == gt_label\n",
+    "    lc_class_agnostic_pix_correct = np.sum(pred_correct)\n",
+    "    lc_class_agnostic_pix_total = in_height * in_width\n",
+    "    class_agnostic_pix_correct += lc_class_agnostic_pix_correct\n",
+    "    class_agnostic_pix_total += lc_class_agnostic_pix_total\n",
+    "    lc_pixel_accu = (float(lc_class_agnostic_pix_correct) / float(lc_class_agnostic_pix_total))\n",
+    "    \n",
+    "#     print 'lc_class_agnostic_pix_correct ',lc_class_agnostic_pix_correct\n",
+    "#     print 'lc_class_agnostic_pix_total ',lc_class_agnostic_pix_total\n",
+    "#     print 'pixel accuracy %f ' % (lc_pixel_accu)\n",
+    "    \n",
+    "    for l in range(num_label):\n",
+    "        idx = np.nonzero(gt_label == l)\n",
+    "        class_pix_correct[l] += np.sum(pred_correct[idx[0], idx[1]])\n",
+    "        class_pix_total[l]+= len(idx[0])\n",
+    "                            \n",
+    "    gt_label=process_label_map(gt_label, num_label)\n",
+    "    pred_label=process_label_map(pred_label, num_label)\n",
+    "    \n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=[20, 10])\n",
+    "    \n",
+    "    im1 = ax1.imshow(test_img)\n",
+    "    ax1.axes.get_xaxis().set_visible(False)\n",
+    "    ax1.axes.get_yaxis().set_visible(False)    \n",
+    "    ax1.set_title('input')\n",
+    "    \n",
+    "    im2 = ax2.imshow(pred_label, cmap='jet')\n",
+    "    ax2.axes.get_xaxis().set_visible(False)\n",
+    "    ax2.axes.get_yaxis().set_visible(False)\n",
+    "    ax2.set_title('prediction, pix accuracy: %4.2f' % (lc_pixel_accu*100))\n",
+    "    \n",
+    "    im3 = ax3.imshow(gt_label, cmap='jet')\n",
+    "    ax3.axes.get_xaxis().set_visible(False)\n",
+    "    ax3.axes.get_yaxis().set_visible(False)\n",
+    "    ax3.set_title('groundtruth')\n",
+    "     \n",
+    "    axins = inset_axes(ax3,\n",
+    "                       width=\"5%\", # width = 10% of parent_bbox width\n",
+    "                       height=\"100%\", # height : 50%\n",
+    "                       loc=3,\n",
+    "                       bbox_to_anchor=(1.05, 0., 1, 1),\n",
+    "                       bbox_transform=ax3.transAxes,\n",
+    "                       borderpad=0)\n",
+    "\n",
+    "    cbar=plt.colorbar(im3, ticks=np.arange(num_label), cax=axins)\n",
+    "    cbar.ax.set_yticklabels(label_names)   \n",
+    "\n",
+    "    plt.savefig(pred_label_image_save_dir+test_img_name+'.jpg', bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "\n",
+    "assert class_agnostic_pix_total == np.sum(class_pix_total)\n",
+    "\n",
+    "pixel_accu = class_agnostic_pix_correct/class_agnostic_pix_total\n",
+    "class_accu = class_pix_correct / class_pix_total\n",
+    "print 'test set pixel accuracy %4.2f' % (pixel_accu*100.0)\n",
+    "print 'test set class accuracy %4.2f' % (np.mean(class_accu[1:])*100.0)"
    ]
   },
   {
@@ -287,7 +422,7 @@
     }
    ],
    "source": [
-    "'''case studies'''\n",
+    "'''cells below include codes for case studies (a.k.a individual test images)'''\n",
     "test_img_name = test_img_names[19]\n",
     "print 'test image name %s' % test_img_name\n",
     "test_img = caffe.io.load_image(img_dir+test_img_name+'.jpg')\n",
@@ -690,149 +825,6 @@
     "ftr_map=net.blobs['prob'].data[0,:,:,:]\n",
     "print ftr_map.shape\n",
     "vis_square(ftr_map,padval=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "process 0 out of 143 images\n",
-      "elapsed time 0.00\n",
-      "process 20 out of 143 images\n",
-      "elapsed time 10.69\n",
-      "process 40 out of 143 images\n",
-      "elapsed time 12.05\n",
-      "process 60 out of 143 images\n",
-      "elapsed time 11.37\n",
-      "process 80 out of 143 images\n",
-      "elapsed time 11.13\n",
-      "process 100 out of 143 images\n",
-      "elapsed time 11.20\n",
-      "process 120 out of 143 images\n",
-      "elapsed time 11.40\n",
-      "process 140 out of 143 images\n",
-      "elapsed time 11.69\n",
-      "pixel accuracy 79.35\n",
-      "class accuracy 69.36\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''evaluate test set'''\n",
-    "\n",
-    "pred_label_image_save_dir = layer_dir + model_name + '_prediction/'\n",
-    "if not os.path.exists(pred_label_image_save_dir):\n",
-    "    os.mkdir(pred_label_image_save_dir)\n",
-    "\n",
-    "\n",
-    "class_agnostic_pix_correct = 0.0\n",
-    "class_agnostic_pix_total = 0.0\n",
-    "class_pix_correct = np.zeros((num_label))\n",
-    "class_pix_total = np.zeros((num_label))\n",
-    "\n",
-    "st_time = time.time()\n",
-    "\n",
-    "for i,test_img_name in enumerate(test_img_names):\n",
-    "# for i in range(2):\n",
-    "    if i % 20 == 0:\n",
-    "        print 'process %d out of %d images' % (i, len(test_img_names))\n",
-    "        ep_time = time.time() - st_time\n",
-    "        st_time = time.time()\n",
-    "        print 'elapsed time %4.2f' % ep_time\n",
-    "    test_img_name = test_img_names[i]\n",
-    "#     print 'test image name %s' % test_img_name\n",
-    "    test_img = caffe.io.load_image(img_dir+test_img_name+'.jpg')\n",
-    "#     print 'test_img_name shape ', test_img.shape\n",
-    "    in_height, in_width = test_img.shape[0], test_img.shape[1]\n",
-    "    \n",
-    "    padded_img = pad_image(test_img,net_input_multiple)\n",
-    "    padded_height, padded_width = padded_img.shape[0], padded_img.shape[1]\n",
-    "    \n",
-    "    transformer = caffe.io.Transformer({'data': [1, 3, padded_img.shape[0], padded_img.shape[1]]})\n",
-    "    transformer.set_transpose('data', (2,0,1))\n",
-    "    transformer.set_mean('data', data_mean) # mean pixel\n",
-    "    transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
-    "    transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB\n",
-    "    transformer.set_input_scale('data', input_scale)  \n",
-    "    \n",
-    "    net.blobs['data'].reshape(1, 3, padded_height, padded_width)\n",
-    "    net.blobs['data'].data[...] = transformer.preprocess('data', padded_img)\n",
-    "    out = net.forward()\n",
-    "    \n",
-    "    '''  ground truth label '''\n",
-    "    gt_label = read_label_file(label_dir + test_img_name + '.regions.txt')\n",
-    "    ''' predicted label '''\n",
-    "    pred_label=np.argmax(net.blobs['prob'].data[0,:,:,:],axis=0)\n",
-    "    pred_label = pred_label[:in_height, :in_width]\n",
-    "    \n",
-    "    assert gt_label.shape == pred_label.shape\n",
-    "    \n",
-    "    pred_correct = pred_label == gt_label\n",
-    "    lc_class_agnostic_pix_correct = np.sum(pred_correct)\n",
-    "    lc_class_agnostic_pix_total = in_height * in_width\n",
-    "    class_agnostic_pix_correct += lc_class_agnostic_pix_correct\n",
-    "    class_agnostic_pix_total += lc_class_agnostic_pix_total\n",
-    "    lc_pixel_accu = (float(lc_class_agnostic_pix_correct) / float(lc_class_agnostic_pix_total))\n",
-    "    \n",
-    "#     print 'lc_class_agnostic_pix_correct ',lc_class_agnostic_pix_correct\n",
-    "#     print 'lc_class_agnostic_pix_total ',lc_class_agnostic_pix_total\n",
-    "#     print 'pixel accuracy %f ' % (lc_pixel_accu)\n",
-    "    \n",
-    "    for l in range(num_label):\n",
-    "        idx = np.nonzero(gt_label == l)\n",
-    "        class_pix_correct[l] += np.sum(pred_correct[idx[0], idx[1]])\n",
-    "        class_pix_total[l]+= len(idx[0])\n",
-    "#         if len(idx[0]) > 0:\n",
-    "#             print 'class %d accuracy %f' % (l, float(np.sum(pred_correct[idx[0], idx[1]]))/len(idx[0]))\n",
-    "                            \n",
-    "                            \n",
-    "    gt_label=process_label_map(gt_label, num_label)\n",
-    "    pred_label=process_label_map(pred_label, num_label)\n",
-    "    \n",
-    "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=[20, 10])\n",
-    "    \n",
-    "    im1 = ax1.imshow(test_img)\n",
-    "    ax1.axes.get_xaxis().set_visible(False)\n",
-    "    ax1.axes.get_yaxis().set_visible(False)    \n",
-    "    ax1.set_title('input')\n",
-    "    \n",
-    "    im2 = ax2.imshow(pred_label, cmap='jet')\n",
-    "    ax2.axes.get_xaxis().set_visible(False)\n",
-    "    ax2.axes.get_yaxis().set_visible(False)\n",
-    "    ax2.set_title('prediction, pix accuracy: %4.2f' % (lc_pixel_accu*100))\n",
-    "    \n",
-    "    im3 = ax3.imshow(gt_label, cmap='jet')\n",
-    "    ax3.axes.get_xaxis().set_visible(False)\n",
-    "    ax3.axes.get_yaxis().set_visible(False)\n",
-    "    ax3.set_title('groundtruth')\n",
-    "     \n",
-    "    axins = inset_axes(ax3,\n",
-    "                       width=\"5%\", # width = 10% of parent_bbox width\n",
-    "                       height=\"100%\", # height : 50%\n",
-    "                       loc=3,\n",
-    "                       bbox_to_anchor=(1.05, 0., 1, 1),\n",
-    "                       bbox_transform=ax3.transAxes,\n",
-    "                       borderpad=0)\n",
-    "\n",
-    "    cbar=plt.colorbar(im3, ticks=np.arange(num_label), cax=axins)\n",
-    "    cbar.ax.set_yticklabels(label_names)   \n",
-    "\n",
-    "    plt.savefig(pred_label_image_save_dir+test_img_name+'.jpg', bbox_inches='tight')\n",
-    "    plt.close()\n",
-    "\n",
-    "assert class_agnostic_pix_total == np.sum(class_pix_total)\n",
-    "\n",
-    "pixel_accu = class_agnostic_pix_correct/class_agnostic_pix_total\n",
-    "class_accu = class_pix_correct / class_pix_total\n",
-    "print 'pixel accuracy %4.2f' % (pixel_accu*100.0)\n",
-    "print 'class accuracy %4.2f' % (np.mean(class_accu[1:])*100.0)"
    ]
   }
  ],
