fix typo in renet_{1,2,3}_lay_HP_nolbw_nopeep_deploy.prototxt

--- a/examples/stanford_background/python/testing_stanford_background.ipynb
+++ b/examples/stanford_background/python/testing_stanford_background.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -39,18 +39,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MODEL_FILE: /usr/local/google/home/zyan/proj/caffe/google_extra/examples/stanford_background/renet_3_lay_MP_nolbw_nopeep_deploy.prototxt\n",
-      "PRETRAINED : /usr/local/google/home/zyan/proj/caffe/google_extra/examples/stanford_background/renet_3_lay/renet_3_lay_MP_nolbw_nopeep_lr5e-2_iter_19000.caffemodel\n"
+      "MODEL_FILE: /home/zyan3/proj/caffe-private-recurrent_2d/examples/stanford_background/renet_1_lay_HP_nolbw_nopeep_deploy.prototxt\n",
+      "PRETRAINED : /home/zyan3/proj/caffe-private-recurrent_2d//examples/stanford_background/renet_1_lay/renet_1_lay_HP_nolbw_nopeep_lr5e-2_iter_18000.caffemodel\n"
      ]
     }
    ],
    "source": [
     "# Set the right path to your model definition file, pretrained model weights,\n",
-    "layer_dir=caffe_root+'/examples/stanford_background/renet_3_lay/'\n",
-    "model_name = 'renet_3_lay_HP_nolbw_nopeep_lr5e-2'\n",
-    "iter_num = 36000\n",
+    "layer_dir=caffe_root+'/examples/stanford_background/renet_1_lay/'\n",
+    "model_name = 'renet_1_lay_HP_nolbw_nopeep_lr5e-2'\n",
+    "iter_num = 18000\n",
     "MODEL_FILE = caffe_root+\\\n",
-    "'examples/stanford_background/renet_3_lay_HP_nolbw_nopeep_deploy.prototxt'\n",
+    "'examples/stanford_background/renet_1_lay_HP_nolbw_nopeep_deploy.prototxt'\n",
     "PRETRAINED =layer_dir +'%s_iter_%d.caffemodel'%(model_name, iter_num)\n",
     "\n",
     "net_input_multiple = [3,3]\n",
@@ -58,15 +58,24 @@
     "num_label=9\n",
     "\n",
     "print 'MODEL_FILE: %s' % MODEL_FILE\n",
-    "print 'PRETRAINED : %s' % PRETRAINED\n",
-    "\n",
+    "print 'PRETRAINED : %s' % PRETRAINED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "caffe.set_mode_gpu()\n",
     "net = caffe.Net(MODEL_FILE, PRETRAINED, caffe.TEST)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,21 +83,15 @@
     {
      "data": {
       "text/plain": [
-       "[('data', (1, 3, 240, 321)),\n",
-       " ('renet_lstm_1_vertical', (1, 80, 80, 107)),\n",
-       " ('renet_lstm_1_horizontal', (1, 80, 80, 107)),\n",
-       " ('conv1', (1, 80, 80, 107)),\n",
-       " ('renet_lstm_2_vertical', (1, 120, 80, 107)),\n",
-       " ('renet_lstm_2_horizontal', (1, 120, 80, 107)),\n",
-       " ('conv2', (1, 120, 80, 107)),\n",
-       " ('renet_lstm_3_vertical', (1, 120, 80, 107)),\n",
-       " ('renet_lstm_3_horizontal', (1, 120, 80, 107)),\n",
-       " ('conv3', (1, 9, 80, 107)),\n",
-       " ('conv3_full_res', (1, 9, 240, 321)),\n",
-       " ('prob', (1, 9, 240, 321))]"
+       "[('data', (10, 3, 240, 321)),\n",
+       " ('renet_lstm_1_vertical', (10, 160, 80, 107)),\n",
+       " ('renet_lstm_1_horizontal', (10, 160, 80, 107)),\n",
+       " ('conv1', (10, 9, 80, 107)),\n",
+       " ('conv1_full_res', (10, 9, 240, 321)),\n",
+       " ('prob', (10, 9, 240, 321))]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -107,18 +110,12 @@
     {
      "data": {
       "text/plain": [
-       "[('renet_lstm_1_vertical', (20, 47)),\n",
-       " ('renet_lstm_1_horizontal', (20, 60)),\n",
-       " ('conv1', (40, 40, 1, 1)),\n",
-       " ('renet_lstm_2_vertical', (30, 70)),\n",
-       " ('renet_lstm_2_horizontal', (30, 90)),\n",
-       " ('conv2', (60, 60, 1, 1)),\n",
-       " ('renet_lstm_3_vertical', (30, 90)),\n",
-       " ('renet_lstm_3_horizontal', (30, 90)),\n",
-       " ('conv3', (9, 60, 1, 1))]"
+       "[('renet_lstm_1_vertical', (80, 107)),\n",
+       " ('renet_lstm_1_horizontal', (80, 240)),\n",
+       " ('conv1', (9, 160, 1, 1))]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -260,21 +257,12 @@
       "process 0 out of 143 images\n",
       "elapsed time 0.00\n",
       "process 20 out of 143 images\n",
-      "elapsed time 10.69\n",
+      "elapsed time 13.11\n",
       "process 40 out of 143 images\n",
-      "elapsed time 12.05\n",
+      "elapsed time 13.48\n",
       "process 60 out of 143 images\n",
-      "elapsed time 11.37\n",
-      "process 80 out of 143 images\n",
-      "elapsed time 11.13\n",
-      "process 100 out of 143 images\n",
-      "elapsed time 11.20\n",
-      "process 120 out of 143 images\n",
-      "elapsed time 11.40\n",
-      "process 140 out of 143 images\n",
-      "elapsed time 11.69\n",
-      "pixel accuracy 79.35\n",
-      "class accuracy 69.36\n"
+      "elapsed time 12.47\n",
+      "process 80 out of 143 images"
      ]
     }
    ],
